Trying to fix mobile scrolling
Horizontal scrolling appears on mobile. Trying to remove it

--- a/style.css
+++ b/style.css
@@ -3,18 +3,14 @@ body {
     background-color: aliceblue;
     color: black;
     font-family: 'Alegreya Sans',Arial, sans-serif;
-    margin-left: 0px;
-    margin-top: 0;
     position: relative;
-    max-width: 100%;
-    
   }
   
   html {
     --top-spacing: 150px;
     scroll-padding-top: var(--top-spacing);
-    max-width: 100%;
-    overflow-x: hidden;
+    height: 100vh;
+    width: 100vw;
   }
   
 
@@ -151,11 +147,6 @@ body {
     height: 20px;
   }
 
-  #container2 {
-    width: 80%;
-  } 
-
-
   .box-shadow {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
@@ -286,6 +277,7 @@ body {
   }
 
   @media screen and (max-width: 641px) {
+
     #biz-info {
       display: flex;
       flex-direction: column;
@@ -314,4 +306,3 @@ body {
       flex-wrap: wrap;
     }
   }
-
